--- a/package.json
+++ b/package.json
@@ -16,9 +16,19 @@
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "0.0.17",
     "@types/bcrypt": "^5.0.2",
@@ -32,6 +42,7 @@
     "mongodb": "^6.6.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "prisma": "^5.13.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
